@@ -712,6 +712,7 @@ Release 0.90.0 - Unreleased
                is now async by default
    HBASE-3275  [rest] No gzip/deflate content encoding support
    HBASE-3261  NPE out of HRS.run at startup when clock is out of sync
+   HBASE-3277  HBase Shell zk_dump command broken
 
 
   IMPROVEMENTS
